--- a/src/main/resources/assets/additionalfishing/lang/en_us.json
+++ b/src/main/resources/assets/additionalfishing/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.additionalfishing.anglerfish": "Anglerfish",
+  "item.additionalfishing.arctic_char": "Arctic char",
   "item.additionalfishing.bass": "Bass",
   "item.additionalfishing.blobfish": "Blobfish",
   "item.additionalfishing.catfish": "Catfish",
@@ -10,8 +11,10 @@
   "item.additionalfishing.herring": "Herring",
   "item.additionalfishing.koi": "Koi",
   "item.additionalfishing.piranha": "Piranha",
+  "item.additionalfishing.rainbowfish": "Rainbowfish",
   "item.additionalfishing.shrimp": "Shrimp",
   "item.additionalfishing.starfish": "Starfish",
+  "item.additionalfishing.tuna": "Tuna",
   "item.additionalfishing.goldfish_cracker": "Goldfish cracker",
   "itemgroup.additionalfishing": "Additional Fishing"
 }
