Fish Cooking, Piranha entity, Loot table balancing

--- a/src/main/resources/assets/additionalfishing/lang/en_us.json
+++ b/src/main/resources/assets/additionalfishing/lang/en_us.json
@@ -1,20 +1,30 @@
 {
   "item.additionalfishing.anglerfish": "Anglerfish",
-  "item.additionalfishing.arctic_char": "Arctic char",
+  "item.additionalfishing.arctic_char": "Arctic Char",
   "item.additionalfishing.bass": "Bass",
-  "item.additionalfishing.blobfish": "Blobfish",
   "item.additionalfishing.catfish": "Catfish",
   "item.additionalfishing.clam": "Clam",
-  "item.additionalfishing.crab_claw": "Crab claw",
+  "item.additionalfishing.raw_crab_claw": "Raw Crab Claw",
   "item.additionalfishing.flounder": "Flounder",
   "item.additionalfishing.goldfish": "Goldfish",
   "item.additionalfishing.herring": "Herring",
   "item.additionalfishing.koi": "Koi",
   "item.additionalfishing.piranha": "Piranha",
   "item.additionalfishing.rainbowfish": "Rainbowfish",
-  "item.additionalfishing.shrimp": "Shrimp",
+  "item.additionalfishing.raw_shrimp": "Raw Shrimp",
   "item.additionalfishing.starfish": "Starfish",
   "item.additionalfishing.tuna": "Tuna",
-  "item.additionalfishing.goldfish_cracker": "Goldfish cracker",
+  "item.additionalfishing.piranha_bucket": "Bucket of Piranha",
+  "item.additionalfishing.piranha_spawn_egg": "Piranha Spawn Egg",
+  "item.additionalfishing.cooked_piranha": "Cooked Piranha",
+  "item.additionalfishing.cooked_flounder": "Cooked Flounder",
+  "item.additionalfishing.cooked_bass": "Cooked Bass",
+  "item.additionalfishing.cooked_herring": "Cooked Herring",
+  "item.additionalfishing.cooked_tuna": "Cooked Tuna",
+  "item.additionalfishing.cooked_catfish": "Cooked Catfish",
+  "item.additionalfishing.cooked_arctic_char": "Cooked Arctic Char",
+  "item.additionalfishing.goldfish_cracker": "Goldfish Cracker",
+  "item.additionalfishing.shrimp": "Shrimp",
+  "item.additionalfishing.crab_claw": "Crab Claw",
   "itemgroup.additionalfishing": "Additional Fishing"
 }
