--- a/src/main/resources/assets/additionalfishing/lang/en_us.json
+++ b/src/main/resources/assets/additionalfishing/lang/en_us.json
@@ -15,7 +15,9 @@
   "item.additionalfishing.starfish": "Starfish",
   "item.additionalfishing.tuna": "Tuna",
   "item.additionalfishing.piranha_bucket": "Bucket of Piranha",
+  "item.additionalfishing.shrimp_bucket": "Bucket of Shrimp",
   "item.additionalfishing.piranha_spawn_egg": "Piranha Spawn Egg",
+  "item.additionalfishing.shrimp_spawn_egg": "Shrimp Spawn Egg",
   "item.additionalfishing.cooked_piranha": "Cooked Piranha",
   "item.additionalfishing.cooked_flounder": "Cooked Flounder",
   "item.additionalfishing.cooked_bass": "Cooked Bass",
