Anglerfish, Arctic Char, Bass entities

--- a/src/main/resources/assets/additionalfishing/lang/en_us.json
+++ b/src/main/resources/assets/additionalfishing/lang/en_us.json
@@ -16,9 +16,15 @@
   "item.additionalfishing.tuna": "Tuna",
   "item.additionalfishing.piranha_bucket": "Bucket of Piranha",
   "item.additionalfishing.shrimp_bucket": "Bucket of Shrimp",
+  "item.additionalfishing.anglerfish_bucket": "Bucket of Anglerfish",
+  "item.additionalfishing.arctic_char_bucket": "Bucket of Arctic Char",
+  "item.additionalfishing.bass_bucket": "Bucket of Bass",
   "item.additionalfishing.piranha_spawn_egg": "Piranha Spawn Egg",
   "item.additionalfishing.shrimp_spawn_egg": "Shrimp Spawn Egg",
   "item.additionalfishing.crab_spawn_egg": "Crab Spawn Egg",
+  "item.additionalfishing.anglerfish_spawn_egg": "Anglerfish Spawn Egg",
+  "item.additionalfishing.arctic_char_spawn_egg": "Arcitc Char Spawn Egg",
+  "item.additionalfishing.bass_spawn_egg": "Bass Spawn Egg",
   "item.additionalfishing.cooked_piranha": "Cooked Piranha",
   "item.additionalfishing.cooked_flounder": "Cooked Flounder",
   "item.additionalfishing.cooked_bass": "Cooked Bass",
